# meshcore_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
config/: .gitignore  bot.example.yaml
src/meshcore_bot/: __init__.py  ble_client.py  config.py  main.py  models.py  responder.py  setup_ble.py
